- Add: ru_RU locale (Thanks to Andriy Olischuk)
- Change: P4A_PROJECT_PATH is now by default equal to SCRIPT_NAME, so it's possible to pass data to a p4a application in the script call
- Fix: various bugfixes