@@ -135,3 +135,4 @@ Christian G. Warden <cwarden@xerus.org>
 Juan Manuel Font Gutiérrez <juanmafont@telefonica.net>
 Julian Shen <julian_shen@users.sourceforge.net>
 Andriy Olischuk <biznw@km.ru>
+Victor Vernescu <victor@chain.ro>
